force-app/main/default/objects/DM_Rotation_Plan__c/DM_Rotation_Plan__c.object-meta.xml
<CustomObject>
    <label>Rotation Plan</label>
    <nameField>
        <label>Rotation Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rotation Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>