force-app/main/default/objects/DM_Rotation_Plan__c/fields/DM_CloneHistory_Id__c.field-meta.xml
<CustomField>
    <fullName>DM_CloneHistory_Id__c</fullName>
    <label>CustomCloneHistoryId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>