force-app/main/default/objects/DM_Rotation_Plan__c/fields/DM_CustomCloneSourceId__c.field-meta.xml
<CustomField>
    <fullName>DM_CustomCloneSourceId__c</fullName>
    <label>CustomCloneSourceId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>