force-app/main/default/objects/DM_Rotation_Plan__c/fields/DM_Field__c.field-meta.xml
<CustomField>
    <fullName>DM_Field__c</fullName>
    <label>Field</label>
    <referenceTo>DM_Field__c</referenceTo>
    <relationshipLabel>Rotation Plans</relationshipLabel>
    <relationshipName>Rotation_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>