force-app/main/default/objects/DM_Rotation_Plan__c/fields/DM_Plan_Years__c.field-meta.xml
<CustomField>
    <fullName>DM_Plan_Years__c</fullName>
    <formula>(DM_End_Date__c - DM_Start_Date__c)/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>