force-app/main/default/objects/DM_Rotation_Plan__c/fields/DM_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>