force-app/main/default/objects/DM_Rotation_Plan__c/recordTypes/DM_Rotation_Plan.recordType-meta.xml
<RecordType>
    <fullName>DM_Rotation_Plan</fullName>
    <active>true</active>
    <label>Rotation Plan</label>
</RecordType>